fix(shs-6671): resolve spotlight slide overlap

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.spotlight.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.spotlight.scss
@@ -373,10 +373,12 @@ $container-small: 576px;
         height: 100%;
       }
 
-      @include hb-themes(('colorful', 'airy')) {
-        @container spotlight (width > #{$container-sidebar}) {
-          width: 102%;
-          margin-inline: -2% 0;
+      &.hb-spotlight--image-default {
+        @include hb-themes(('colorful', 'airy')) {
+          @container spotlight (width > #{$container-sidebar}) {
+            width: 102%;
+            margin-inline: -2% 0;
+          }
         }
       }
     }
